<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Testing</groupId>
  <artifactId>Testing</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Test Practice</name>
  <description>Test Practice using Maven, testng and Selenium with Java</description>
  
<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<aspectj.version>1.8.10</aspectj.version>
	</properties>


	<build>
		
		<!-- <sourceDirectory>src</sourceDirectory> -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
				<forkcount>3</forkcount>
				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				<reuserForks>true</reuserForks>
					
					<!-- Suite testng xml file to consider for test execution -->
					<suiteXmlFiles>
						<!-- <suiteXmlFile>./src/test/resources/testRunners/testng2.xml</suiteXmlFile> -->
						<suiteXmlFile>./testng.xml</suiteXmlFile>

					</suiteXmlFiles>
					
					<argLine> -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar" </argLine>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
				<dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
			</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<executions>
						<execution>
							<id>attach-source</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			
			<plugin>
			    <artifactId>maven-clean-plugin</artifactId>
			    <version>3.1.0</version>
			    <configuration>
			        <filesets>
			            <fileset>
			                <directory>screenshots</directory>
			                <directory>build</directory> 
			                <directory>allure-results/</directory>
			                <includes>
			                    <include>**/*</include>
			                </includes>
			                <followSymlinks>false</followSymlinks>
			            </fileset>
			        </filesets>
			    </configuration>
			</plugin>


		</plugins>
	</build>


	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>4.0.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
			<!-- <scope>test</scope> -->
		</dependency>



		
			
	</dependencies>
	

	
	
</project>